content & font changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="container">
           <!-- Branding Image -->
           <a class="navbar-brand" routerLink="/" title="Uxmint">
-            <img src="/assets/images/logo1.png" alt="Uxmint" />
+            <img src="/assets/images/sample/logo.svg" alt="Uxmint" />
           </a>
           <!-- ./Branding Image -->
           <button class="navbar-toggler" type="button" (click)="toggleMenu()">
