--- a/src/styles.scss
+++ b/src/styles.scss
@@ -668,7 +668,7 @@ label{
             width: 16px;
             height: 16px;
             border-radius: 50%;
-            background: #1ED69F;
+            background: #60D6C9;
             display: block;
             position: absolute;
             top: -9px;
@@ -702,7 +702,7 @@ label{
                             content: '';
                             position: absolute;
                             height: 0;
-                            background-color: #1ED69F;
+                            background-color: #60D6C9;
                             width: 8px;
                             left: -13px;
                             bottom: 5px;
@@ -1215,7 +1215,7 @@ label{
         }
         h3{
             font-size: 13px;
-            color: #1ED69F;
+            color: #60D6C9;
             margin-bottom: 20px;
         }
         a{
@@ -1223,7 +1223,7 @@ label{
             cursor: pointer;
             font-size: 13px;
             font-family: 'Roboto', serif;
-            color: #1ED69F;
+            color: #60D6C9;
             text-decoration: none;
         }
     }
@@ -1279,7 +1279,7 @@ label{
         }
         h3{
             font-size: 13px;
-            color: #1ED69F;
+            color: #60D6C9;
             margin-bottom: 20px;
         }
         a{
@@ -1287,7 +1287,7 @@ label{
             cursor: pointer;
             font-size: 13px;
             font-family: 'Roboto', serif;
-            color: #1ED69F;
+            color: #60D6C9;
             text-decoration: none;
         }
     }
