--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,11 @@ header{
     }
     .navbar-brand{
         padding: 20px 0;
+        //
+        img{
+            width: 200%;
+        }
+        //
     }
     .nav-item{
         border: 1px solid transparent;
@@ -26,6 +31,7 @@ header{
             font-size: 14px;
             font-weight: 500;
             font-family: 'Inter', sans-serif;
+            color: #A8A8A8;
             span{
                 position: relative;
                 z-index: 1;
@@ -33,12 +39,13 @@ header{
                     content: '';
                     position: absolute;
                     height: 0;
-                    background-color: $primary;
+                    background-color: #60D6C9;
                     width: 8px;
                     left: -13px;
                     bottom: 4px;
                     z-index: -1;
                     transition: all 0.1s ease-in;
+                    border-radius: 5px;
                 }
             }
             &.active,
@@ -182,7 +189,7 @@ footer{
         .navbar-brand{
             img{
                 height: auto;
-                width: auto;
+                width: 180%;
             }
         }
         .nav-item{
