--- a/src/app/components/projects/app-development/app-development.component.scss
+++ b/src/app/components/projects/app-development/app-development.component.scss
@@ -6,27 +6,31 @@
 /* App Development */
 .app-development{
     .case-study{
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         padding-top: 80px;
     }
     .heading{
-        font-family: 'Roboto', sans-serif;
         h1{
-            font-size: 60px;
+            font-size: 70px;
             font-weight: 400;
+            font-family: 'Libre Baskerville', serif;
         }
         p{
             color: #575757;
-            font-size: 16px;
-            text-align: justify;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
+            text-align: left;
         }
     }
     .web{
         p{
             color: #575757;
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
             padding-top: 40px;
         }
     }
@@ -37,7 +41,9 @@
             padding-right: 15px;
             display: inline-block;
             color: #000000;
-            font-size: 16px;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
             &:last-child{
                 padding-right: 0;
             }
@@ -86,14 +92,15 @@
     padding-top: 50px;
     padding-bottom: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         color: #575757;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
 }
@@ -103,7 +110,7 @@
         padding-top: 30px;
         padding-bottom: 30px;
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         p{
             font-size: 13px;
@@ -119,15 +126,15 @@
     background-color: #484848;
     color: #ffffff;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
     }
     p{
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: normal;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     .list-icons{
@@ -157,7 +164,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     h1{
-        font-size: 40px;
+        font-size: 25px;
         padding-bottom: 10px;
     }
     p{
@@ -173,21 +180,23 @@
     padding-bottom: 30px;
     background-color: #FCEFF3;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         padding-top: 30px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #575757;
-        font-weight: normal;
         text-align: justify;
     }
     h3{
         color: #000000;
-        font-size: 20px;
+        font-size: 24px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -209,9 +218,10 @@
 @include media-breakpoint-down(md) {
     .framework{
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         p{
+            font-size: 13px;
             padding-top: 10px;
         }
         .list-icons{
@@ -227,26 +237,26 @@
     padding-top: 50px;
     padding-bottom: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         color: #575757;
         padding-top: 30px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: normal;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     .list{
         padding-top: 60px;
         li{
         padding-top: 20px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #575757;
-        font-weight: normal;
         }
     }
 }
@@ -254,9 +264,10 @@
 @include media-breakpoint-down(md) {
     .what-we-done{
         h1{
-            font-size: 40px;
+            font-size: 26px;
         }
         p{
+            font-size: 13px;
             padding-top: 10px;
         }
     .list{
