--- a/src/app/components/projects/child-care/child-care.component.scss
+++ b/src/app/components/projects/child-care/child-care.component.scss
@@ -8,14 +8,16 @@
         padding-top: 50px;
         padding-bottom: 20px;
     .heading{
-        font-family: 'Roboto', sans-serif;
         h1{
             font-size: 70px;
             font-weight: 400;
+            font-family: 'Libre Baskerville', serif;
         }
         p{
             color: #5C5C5C;
-            font-size: 16px;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
             text-align: justify;
         }
     }
@@ -43,15 +45,16 @@
     padding-top: 50px;
     background-color: #E3E3E3;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
+        font-size: 40px;
         padding-bottom: 20px;
     }
     p{
         color: #5C5C5C;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     .list{
@@ -65,13 +68,15 @@
                 padding-right: 0;
             }
             h3{
-                font-family: 'Roboto', sans-serif;
-                font-size: 16px;
+                font-weight: 400;
+                font-family: 'Roboto Slab', serif;
+                font-size: 15px;
                 color: #707070;
             }
             p{
-                font-family: 'Roboto', sans-serif;
-                font-size: 20px;
+                font-weight: 400;
+                font-family: 'Roboto Slab', serif;
+                font-size: 15px;
                 color: #000000;
             }
         }
@@ -81,7 +86,7 @@
 @include media-breakpoint-down(md) {
     .about-project{
         h1{
-            font-size: 40px;
+            font-size: 25px;
             padding-bottom: 10px;
         }
         p{
@@ -108,15 +113,16 @@
     padding-top: 50px;
     background-color: #F4F4F4;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
     }
     p{
         padding-bottom: 0px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
+        font-size: 14px;
         color: #5C5C5C;
         text-align: justify;
     }
@@ -141,7 +147,7 @@
         padding-bottom: 50px;
         padding-top: 50px;
         h1{
-            font-size: 40px;
+            font-size: 25px;
             padding-bottom: 10px;
         }
         p{
