--- a/src/app/components/projects/construction-portal/construction-portal.component.scss
+++ b/src/app/components/projects/construction-portal/construction-portal.component.scss
@@ -7,7 +7,6 @@
 .construction{
     padding-top: 50px;
     padding-bottom: 20px;
-    font-family: 'Roboto', sans-serif;
     .heading{
         list-style: none;
         padding: 0;
@@ -18,18 +17,21 @@
                 padding-right: 0;
             }
             h1{
-                font-family: 'Roboto', sans-serif;
                 font-size: 70px;
-                font-weight: 100;
+                font-weight: 400;
+                font-family: 'Libre Baskerville', serif;
             }
             h3{
-                font-family: 'Roboto', sans-serif;
-                font-size: 35px;
+                font-size: 40px;
+                font-weight: 300;
+                font-family: 'Inter', sans-serif;
             }
 }
     }
     p{
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
         color: #5C5C5C;
     }
@@ -49,7 +51,7 @@
                     font-size: 40px;
                 }
                 h3{
-                    font-size: 23px;
+                    font-size: 25px;
                 }
             }
         }
@@ -65,15 +67,16 @@
     padding-bottom: 50px;
     padding-top: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 30px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 10px;
     }
     p{
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #5C5C5C;
-        font-family: 'Roboto', sans-serif;
         text-align: justify;
     }
     .list{
@@ -87,13 +90,15 @@
                 padding-right: 0;
             }
             h3{
-                font-family: 'Roboto', sans-serif;
-                font-size: 16px;
+                font-size: 15px;
+                font-weight: 400;
+                font-family: 'Roboto Slab', serif;
                 color: #707070;
             }
             p{
-                font-family: 'Roboto', sans-serif;
-                font-size: 20px;
+                font-size: 15px;
+                font-weight: 400;
+                font-family: 'Roboto Slab', serif;
                 color: #000000;
             }
         }
@@ -104,7 +109,7 @@
     .about-project{
         padding-bottom: 30px;
         h1{
-            font-size: 20px;
+            font-size: 25px;
         }
         p{
             font-size: 13px;
@@ -129,15 +134,16 @@
     padding-bottom: 50px;
     padding-top: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 30px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 10px;
     }
     p{
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #5C5C5C;
-        font-family: 'Roboto', sans-serif;
         text-align: justify;
     }
 }
@@ -147,7 +153,7 @@
         padding-bottom: 30px;
         padding-top: 30px;
         h1{
-            font-size: 20px;
+            font-size: 25px;
         }
         p{
             font-size: 13px;
@@ -161,15 +167,16 @@
     padding-bottom: 50px;
     padding-top: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 70px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
     }
     p{
         padding-bottom: 20px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #5C5C5C;
         text-align: justify;
     }
@@ -180,7 +187,7 @@
         padding-bottom: 30px;
         padding-top: 30px;
         h1{
-            font-size: 40px;
+            font-size: 25px;
             padding-bottom: 10px;
         }
         p{
@@ -208,15 +215,16 @@
     padding-bottom: 50px;
     padding-top: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 70px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
     }
     p{
         padding-bottom: 20px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #5C5C5C;
         text-align: justify;
     }
@@ -227,7 +235,7 @@
         padding-bottom: 30px;
         padding-top: 30px;
         h1{
-            font-size: 40px;
+            font-size: 25px;
             padding-bottom: 10px;
         }
         p{
@@ -245,9 +253,9 @@
     background-color: #3B445B;
     .heading{
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 30px;
         color: #ffffff;
     }
@@ -263,7 +271,7 @@
          padding-bottom: 20px;
          .heading{
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         img{
             width: 100%;
