--- a/src/app/components/projects/web-development/web-development.component.scss
+++ b/src/app/components/projects/web-development/web-development.component.scss
@@ -7,27 +7,32 @@
 .web-development{
     padding-top: 80px;
     .case-study{
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         padding-top: 30px;
     }
     .heading{
-        font-family: 'Roboto', sans-serif;
         h1{
-            font-size: 60px;
+            font-size: 70px;
             font-weight: 400;
+            font-family: 'Libre Baskerville', serif;
+            line-height: 70px;
         }
         p{
             color: #575757;
-            font-size: 16px;
-            text-align: justify;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
+            text-align: left;
         }
     }
     .web{
         p{
             color: #575757;
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto Slab', serif;
             padding-top: 40px;
         }
     }
@@ -91,14 +96,15 @@
     padding-top: 100px;
     padding-bottom: 100px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         color: #575757;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
 }
@@ -108,7 +114,7 @@
         padding-top: 80px;
         padding-bottom: 30px;
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         p{
             font-size: 13px;
@@ -124,15 +130,15 @@
     background-color: #0D5F9B;
     color: #ffffff;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
     }
     p{
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: normal;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     .icon{
@@ -154,7 +160,7 @@
 @include media-breakpoint-down(md) {
 .platform{
     h1{
-        font-size: 40px;
+        font-size: 25px;
         padding-bottom: 10px;
     }
     p{
@@ -175,21 +181,23 @@
     padding-bottom: 30px;
     background-color: #EFF5F9;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         padding-top: 30px;
         color: #575757;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: normal;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     h3{
         color: #000000;
-        font-size: 20px;
+        font-size: 24px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -211,7 +219,7 @@
 @include media-breakpoint-down(md) {
     .framework{
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         p{
             padding-top: 10px;
@@ -229,26 +237,26 @@
     padding-top: 50px;
     padding-bottom: 50px;
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: lighter;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
     }
     p{
         padding-top: 30px;
         color: #575757;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
-        font-weight: normal;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         text-align: justify;
     }
     .list{
         padding-top: 60px;
         li{
         padding-top: 20px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto Slab', serif;
         color: #575757;
-        font-weight: normal;
         text-align: justify;
         }
     }
@@ -257,7 +265,7 @@
 @include media-breakpoint-down(md) {
     .what-we-done{
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         p{
             padding-top: 10px;
@@ -289,9 +297,9 @@
     background-color: #3B445B;
     .heading{
     h1{
-        font-family: 'Roboto', sans-serif;
-        font-size: 60px;
-        font-weight: 400;
+        font-size: 40px;
+        font-weight: 300;
+        font-family: 'Inter', sans-serif;
         padding-bottom: 30px;
         color: #ffffff;
     }
@@ -307,7 +315,7 @@
          padding-bottom: 20px;
          .heading{
         h1{
-            font-size: 40px;
+            font-size: 25px;
         }
         img{
             width: 100%;
