content & font changes

--- a/src/app/components/projects/health/health.component.scss
+++ b/src/app/components/projects/health/health.component.scss
@@ -430,7 +430,7 @@
         font-weight: 300;
         font-family: 'Inter', sans-serif;
         padding-bottom: 20px;
-        color: #60D6C9;
+        color: #15A450;
     }
     img{
         width: 100%;
